--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Humans</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="the humans responsible & colophon">
+    <meta name="author" content="zh99998">
     <link type="text/plain" rel="author" href="/humans.txt"/>
     <!-- modify here if your humanstxt not in /humans.txt -->
     <!-- Le styles -->
