--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
         h3 {
             display: inline;
         }
+        h3 a{
+            white-space: nowrap;
+            display: block;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
     </style>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -118,6 +124,8 @@
 
                 <p><a href="/join" class="btn btn-primary btn-large">加入我们 &raquo;</a></p>
             </div>
+
+
         </section>
     </div>
 
@@ -206,6 +214,9 @@
                         case 'site':
                             human.site = value
                             break
+                        case 'facebook':
+                            human.avatar = 'https://graph.facebook.com/' + value + '/picture?type=large'
+                            human.facebook = value
                         case 'google+':
                             matched = value.match(/^\+?(.*?)\s*(?:\((\d+)\))?$/)
                             human.google_plus = matched[1]
