--- a/index.html
+++ b/index.html
@@ -10,68 +10,8 @@
     <!-- modify here if your humanstxt not in /humans.txt -->
     <!-- Le styles -->
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-    <style type="text/css">
-        body {
-            padding-top: 60px;
-            padding-bottom: 40px;
-        }
-
-        .sidebar-nav {
-            padding: 9px 0;
-        }
-
-        @media (max-width: 980px) {
-            /* Enable use of floated navbar text */
-            .navbar-text.pull-right {
-                float: none;
-                padding-left: 5px;
-                padding-right: 5px;
-            }
-        }
-    </style>
-    <style>
-        h2 {
-            clear: both
-        }
-
-        article {
-            background-color: lightgray;
-            margin-bottom: 10px;
-            min-height: 120px !important;
-        }
-
-        .avatar {
-            width: 120px;
-            height: 120px;
-            float: left;
-        }
-        .twitter, .google_plus {
-            display: block;
-        }
-        .twitter:before {
-            content: '@';
-            padding-left: 20px;
-            background: url(https://twitter.com/images/resources/twitter-bird-16x16.png) no-repeat;
-        }
-        .google_plus:before {
-            content: '+';
-            padding-left: 20px;
-            background: url(https://ssl.gstatic.com/images/icons/gplus-16.png) no-repeat;
-        }
-        .site {
-            padding-left: 20px;
-            background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/link.png) no-repeat;
-        }
-        .field, .role {
-            display: block;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-        h3 {
-            display: inline;
-        }
-    </style>
+    <link href="/style.css" rel="stylesheet">
+    
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
