--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- modify here if your humanstxt not in /humans.txt -->
     <!-- Le styles -->
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="humans/style.css" rel="stylesheet">
     
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
