--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
             } else if (matched = line.match(/^\s*$/)) {
                 if (human) {
                     $('<article/>', {id: human.name, class: "span4"}).append([
-                        human.avatar ? $('<img/>', {src: human.avatar, class: 'avatar'}) . $('<div class="cover"></div>') : null,
+                        human.avatar ? $('<img/>', {src: human.avatar, class: 'avatar'}) : null,
+                        human.avatar ? $('<div class="cover"></div>') : null,
                         $('<h3/>').append($('<a/>', {href: human.site, text: human.name})),
                         human.email ? $('<a/>', {class: 'icon-envelope', href: 'mailto:'+human.email}) : null,
                         $('<span/>', {text: human.role, class: 'role'}),
