--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link type="text/plain" rel="author" href="/humans.txt"/>
     <!-- modify here if your humanstxt not in /humans.txt -->
     <!-- Le styles -->
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="humans/style.css" rel="stylesheet">
     
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
