--- a/index.html
+++ b/index.html
@@ -53,9 +53,15 @@
         <section id="humans" class="span9">
             <div class="hero-unit">
                 <h1>开发组名单</h1>
-
+                <br/>
                 <p>这里列出了对 <span class='brand'></span> 有过直接代码或资源贡献的人员，感谢他们的支持。</p>
-
+                <p>
+                    开发组福利，有需要请找zh99998索取:<br/>
+                    正版Jetbrains Rubymine<br/>
+                    正版Jetbrains Webstorm<br/>
+                    迅雷会员(子账号，共享)
+                </p>
+                <br/>
                 <p><a href="/join" class="btn btn-primary btn-large">加入我们 &raquo;</a></p>
             </div>
 
